	locale if a non-ASCII character was supplied.

    o	There are some checks for valid C-style formats in, e.g. 
	png(filename=).  (PR#10571)

    o	slotNames() was erroneously treating classes that extend
	"character" as strings.

    o	Rdconv was not marking examples files with an encoding if
	this was known from the package's DESCRIPTION file.




	**************************************************
	*						 *
	*	       2.6 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.6.1 patched


NEW FEATURES

    o	colnames(DF) is now also fast for large dataframes DF with
	automatic row.names.  Note that the correct usage is
	names(DF).  (PR#10470)

    o	tools::texi2dvi() works around the failure of 'texi2dvi --quiet' 
	to be quiet in texinfo 4.11.


BUG FIXES

    o	A compilation problem on one system where glob was not found
	has been corrected.  (PR#10468)

    o	The "profile.nls" method of plot() was losing the x axis labels.

    o	array() computed the total number of entries in the array before
	coercing the dimensions to integer.  (Reported by Allen McIntosh.)

    o	persp() misreported errors in the y parameter.  (Reported by Allen
	McIntosh.)

    o	source("clipboard", echo=TRUE) and file("clipboard", open="rt")
	gave spurious errors.  (Reported by Fernando Saldanha.)

    o	attributes<-() stripped any existing attributes before checking
	that all elements of the right-hand side had names.

    o	rbinom(n, size, *) gave NaN when 'size > .Machine$integer.max'.

    o	print.summary.lm() is now consistent in the capitalization of
	"R-squared".

    o	confint() misreported on some rank-deficient lm() models.
	(PR#10496)  This could also occur in the default method.

    o	\code{\var{<name>}} was not rendered correctly to latex in Rd files
	for non-alphabetic arguments <name>.

    o	In 2.6.1, curve(*, add=TRUE) used a wrong default 'xlim' when x
	coordinates were logged.
